Fixed line height in Play page on mobile

--- a/play/css/style.css
+++ b/play/css/style.css
@@ -121,6 +121,7 @@ header {
 .container h2 {
 	font-weight: 200;
 	font-size: 28px;
+	line-height: 40px;
 }
 
 .underline, .underline:hover { position: relative; }
@@ -184,7 +185,10 @@ footer p {
 
 	.container {
 		width: 100%;
-		margin: 20% auto;
+		margin: 10% auto;
 	}
-	.container h2 { font-size: 18px; }
+	.container h2 {
+		font-size: 16px;
+		line-height: 30px;
+	}
 }
